@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/emul-linux-x86-baselibs
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.94 2008/11/10 03:28:57 kingtaco Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.95 2009/05/10 18:27:38 arfrever Exp $
+
+  10 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  emul-linux-x86-baselibs-20080316.ebuild,
+  emul-linux-x86-baselibs-20081109.ebuild:
+  Set QA_DT_HASH.
 
 *emul-linux-x86-baselibs-20081109 (10 Nov 2008)
 
